kubernetes/gitea-stateful-set-update.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: gitea
  namespace: gitea
spec:
  volumes:
    - name: ca
      secret:
        secretName: tls-ca
        defaultMode: 420
  containers:
    - name: gitea
      volumeMounts:
        - name: ca
          mountPath: /tmp
      lifecycle:
        postStart:
          exec:
            command:
              - /bin/sh
              - '-c'
              - >-
                cp /tmp/rootCA_crt.pem /usr/local/share/ca-certificates/tls.ca.crt &&
                /usr/sbin/update-ca-certificates
