kubernetes/gitea-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea-ingress
  namespace: gitea
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: 192-168-64-2-nip-io-tls
      hosts:
        - gitea.192.168.64.2.nip.io
  rules:
    - host: gitea.192.168.64.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
