kubernetes/tekton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-ingress
  namespace: tekton-pipelines
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - secretName: ingress-tls
      hosts:
        - tekton-dashboard.192.168.64.2.nip.io  
  rules:
    - host: tekton-dashboard.192.168.64.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
